// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wonder-blocks-progress-spinner example 1 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "justifyContent": "center",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <svg
    className=""
    height={96}
    style={
      Object {
        "animationDuration": "1.1s",
        "animationIterationCount": "infinite",
        "animationName": Object {
          "0%": Object {
            "transform": "rotate(0deg)",
          },
          "100%": Object {
            "transform": "rotate(360deg)",
          },
          "50%": Object {
            "transform": "rotate(180deg)",
          },
        },
        "animationTimingFunction": "linear",
      }
    }
    viewBox="0 0 96 96"
    width={96}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      className=""
      d="M88.38 46.91a3.818 3.818 0 1 1 7.602 0h.006c.008.362.012.725.012 1.09 0 26.51-21.49 48-48 48S0 74.51 0 48 21.49 0 48 0c.365 0 .728.004 1.09.012v.005a3.818 3.818 0 1 1 0 7.602v.032c-.362-.01-.725-.015-1.09-.015C25.708 7.636 7.636 25.708 7.636 48c0 22.292 18.072 40.364 40.364 40.364 22.292 0 40.364-18.072 40.364-40.364 0-.365-.005-.728-.015-1.09h.032z"
      fillRule="nonzero"
      style={
        Object {
          "fill": "rgba(33,36,44,0.16)",
        }
      }
    />
  </svg>
</div>
`;

exports[`wonder-blocks-progress-spinner example 2 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "row",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "alignItems": "center",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "column",
          "height": 154,
          "justifyContent": "center",
          "margin": 0,
          "marginRight": 16,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "textAlign": "center",
          "width": 154,
          "zIndex": 0,
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <svg
          className=""
          height={96}
          style={
            Object {
              "animationDuration": "1.1s",
              "animationIterationCount": "infinite",
              "animationName": Object {
                "0%": Object {
                  "transform": "rotate(0deg)",
                },
                "100%": Object {
                  "transform": "rotate(360deg)",
                },
                "50%": Object {
                  "transform": "rotate(180deg)",
                },
              },
              "animationTimingFunction": "linear",
            }
          }
          viewBox="0 0 96 96"
          width={96}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className=""
            d="M88.38 46.91a3.818 3.818 0 1 1 7.602 0h.006c.008.362.012.725.012 1.09 0 26.51-21.49 48-48 48S0 74.51 0 48 21.49 0 48 0c.365 0 .728.004 1.09.012v.005a3.818 3.818 0 1 1 0 7.602v.032c-.362-.01-.725-.015-1.09-.015C25.708 7.636 7.636 25.708 7.636 48c0 22.292 18.072 40.364 40.364 40.364 22.292 0 40.364-18.072 40.364-40.364 0-.365-.005-.728-.015-1.09h.032z"
            fillRule="nonzero"
            style={
              Object {
                "fill": "rgba(33,36,44,0.16)",
              }
            }
          />
        </svg>
      </div>
      <span
        className=""
        style={
          Object {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
          }
        }
      >
        size: large (96px)
      </span>
    </div>
    <div
      className=""
      style={
        Object {
          "alignItems": "center",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "column",
          "height": 154,
          "justifyContent": "center",
          "margin": 0,
          "marginRight": 16,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "textAlign": "center",
          "width": 154,
          "zIndex": 0,
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <svg
          className=""
          height={48}
          style={
            Object {
              "animationDuration": "1.1s",
              "animationIterationCount": "infinite",
              "animationName": Object {
                "0%": Object {
                  "transform": "rotate(0deg)",
                },
                "100%": Object {
                  "transform": "rotate(360deg)",
                },
                "50%": Object {
                  "transform": "rotate(180deg)",
                },
              },
              "animationTimingFunction": "linear",
            }
          }
          viewBox="0 0 48 48"
          width={48}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className=""
            d="M44.19 23.455a1.91 1.91 0 1 1 3.801 0h.003c.004.18.006.363.006.545 0 13.255-10.745 24-24 24S0 37.255 0 24 10.745 0 24 0c.182 0 .364.002.545.006V.01a1.91 1.91 0 1 1 0 3.801v.015A20.564 20.564 0 0 0 24 3.818C12.854 3.818 3.818 12.854 3.818 24c0 11.146 9.036 20.182 20.182 20.182 11.146 0 20.182-9.036 20.182-20.182 0-.182-.003-.364-.007-.545h.015z"
            fillRule="nonzero"
            style={
              Object {
                "fill": "rgba(33,36,44,0.16)",
              }
            }
          />
        </svg>
      </div>
      <span
        className=""
        style={
          Object {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
          }
        }
      >
        size: medium (48px)
      </span>
    </div>
    <div
      className=""
      style={
        Object {
          "alignItems": "center",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "column",
          "height": 154,
          "justifyContent": "center",
          "margin": 0,
          "marginRight": 16,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "textAlign": "center",
          "width": 154,
          "zIndex": 0,
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <svg
          className=""
          height={24}
          style={
            Object {
              "animationDuration": "1.1s",
              "animationIterationCount": "infinite",
              "animationName": Object {
                "0%": Object {
                  "transform": "rotate(0deg)",
                },
                "100%": Object {
                  "transform": "rotate(360deg)",
                },
                "50%": Object {
                  "transform": "rotate(180deg)",
                },
              },
              "animationTimingFunction": "linear",
            }
          }
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className=""
            d="M10.598.943c-.093-.449-.362-.748-.732-.875a1.314 1.314 0 0 0-.723-.033C3.83 1.417 0 6.317 0 11.864 0 18.538 5.398 24 12 24c6.598 0 12-5.471 12-12.16a1.333 1.333 0 0 0-.154-.548c-.193-.368-.544-.606-1.023-.606-.472 0-.825.229-1.035.585-.117.2-.169.39-.189.582-.124 5.472-4.294 9.73-9.599 9.73-5.349 0-9.599-4.3-9.599-9.72 0-4.46 3.036-8.299 7.28-9.444.127-.036.291-.107.458-.232.373-.28.57-.711.46-1.244z"
            fillRule="nonzero"
            style={
              Object {
                "fill": "rgba(33,36,44,0.16)",
              }
            }
          />
        </svg>
      </div>
      <span
        className=""
        style={
          Object {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
          }
        }
      >
        size: small (24px)
      </span>
    </div>
    <div
      className=""
      style={
        Object {
          "alignItems": "center",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "column",
          "height": 154,
          "justifyContent": "center",
          "margin": 0,
          "marginRight": 16,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "textAlign": "center",
          "width": 154,
          "zIndex": 0,
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <svg
          className=""
          height={16}
          style={
            Object {
              "animationDuration": "1.1s",
              "animationIterationCount": "infinite",
              "animationName": Object {
                "0%": Object {
                  "transform": "rotate(0deg)",
                },
                "100%": Object {
                  "transform": "rotate(360deg)",
                },
                "50%": Object {
                  "transform": "rotate(180deg)",
                },
              },
              "animationTimingFunction": "linear",
            }
          }
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className=""
            d="M7.237.741C7.165.393 6.95.154 6.656.053A1.01 1.01 0 0 0 6.18.01c-.053.009-.053.009-.087.017C2.553.949 0 4.214 0 7.91 0 12.36 3.598 16 8 16c4.4 0 8-3.647 8-8.112a1.02 1.02 0 0 0-.118-.423.877.877 0 0 0-.808-.48.909.909 0 0 0-.81.46c-.09.151-.13.296-.146.455-.08 3.493-2.737 6.207-6.118 6.207-3.41 0-6.118-2.74-6.118-6.196 0-2.843 1.936-5.291 4.644-6.022.1-.028.224-.082.352-.177a.928.928 0 0 0 .36-.97z"
            fillRule="nonzero"
            style={
              Object {
                "fill": "rgba(33,36,44,0.16)",
              }
            }
          />
        </svg>
      </div>
      <span
        className=""
        style={
          Object {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
          }
        }
      >
        size: xsmall (16px)
      </span>
    </div>
  </div>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "background": "#0a2a66",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "color": "#ffffff",
        "display": "flex",
        "flexDirection": "row",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "alignItems": "center",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "column",
          "height": 154,
          "justifyContent": "center",
          "margin": 0,
          "marginRight": 16,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "textAlign": "center",
          "width": 154,
          "zIndex": 0,
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <svg
          className=""
          height={96}
          style={
            Object {
              "animationDuration": "1.1s",
              "animationIterationCount": "infinite",
              "animationName": Object {
                "0%": Object {
                  "transform": "rotate(0deg)",
                },
                "100%": Object {
                  "transform": "rotate(360deg)",
                },
                "50%": Object {
                  "transform": "rotate(180deg)",
                },
              },
              "animationTimingFunction": "linear",
            }
          }
          viewBox="0 0 96 96"
          width={96}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className=""
            d="M88.38 46.91a3.818 3.818 0 1 1 7.602 0h.006c.008.362.012.725.012 1.09 0 26.51-21.49 48-48 48S0 74.51 0 48 21.49 0 48 0c.365 0 .728.004 1.09.012v.005a3.818 3.818 0 1 1 0 7.602v.032c-.362-.01-.725-.015-1.09-.015C25.708 7.636 7.636 25.708 7.636 48c0 22.292 18.072 40.364 40.364 40.364 22.292 0 40.364-18.072 40.364-40.364 0-.365-.005-.728-.015-1.09h.032z"
            fillRule="nonzero"
            style={
              Object {
                "fill": "#ffffff",
              }
            }
          />
        </svg>
      </div>
      <span
        className=""
        style={
          Object {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
          }
        }
      >
        light, size: large (96px)
      </span>
    </div>
    <div
      className=""
      style={
        Object {
          "alignItems": "center",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "column",
          "height": 154,
          "justifyContent": "center",
          "margin": 0,
          "marginRight": 16,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "textAlign": "center",
          "width": 154,
          "zIndex": 0,
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <svg
          className=""
          height={48}
          style={
            Object {
              "animationDuration": "1.1s",
              "animationIterationCount": "infinite",
              "animationName": Object {
                "0%": Object {
                  "transform": "rotate(0deg)",
                },
                "100%": Object {
                  "transform": "rotate(360deg)",
                },
                "50%": Object {
                  "transform": "rotate(180deg)",
                },
              },
              "animationTimingFunction": "linear",
            }
          }
          viewBox="0 0 48 48"
          width={48}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className=""
            d="M44.19 23.455a1.91 1.91 0 1 1 3.801 0h.003c.004.18.006.363.006.545 0 13.255-10.745 24-24 24S0 37.255 0 24 10.745 0 24 0c.182 0 .364.002.545.006V.01a1.91 1.91 0 1 1 0 3.801v.015A20.564 20.564 0 0 0 24 3.818C12.854 3.818 3.818 12.854 3.818 24c0 11.146 9.036 20.182 20.182 20.182 11.146 0 20.182-9.036 20.182-20.182 0-.182-.003-.364-.007-.545h.015z"
            fillRule="nonzero"
            style={
              Object {
                "fill": "#ffffff",
              }
            }
          />
        </svg>
      </div>
      <span
        className=""
        style={
          Object {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
          }
        }
      >
        light, size: medium (48px)
      </span>
    </div>
    <div
      className=""
      style={
        Object {
          "alignItems": "center",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "column",
          "height": 154,
          "justifyContent": "center",
          "margin": 0,
          "marginRight": 16,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "textAlign": "center",
          "width": 154,
          "zIndex": 0,
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <svg
          className=""
          height={24}
          style={
            Object {
              "animationDuration": "1.1s",
              "animationIterationCount": "infinite",
              "animationName": Object {
                "0%": Object {
                  "transform": "rotate(0deg)",
                },
                "100%": Object {
                  "transform": "rotate(360deg)",
                },
                "50%": Object {
                  "transform": "rotate(180deg)",
                },
              },
              "animationTimingFunction": "linear",
            }
          }
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className=""
            d="M10.598.943c-.093-.449-.362-.748-.732-.875a1.314 1.314 0 0 0-.723-.033C3.83 1.417 0 6.317 0 11.864 0 18.538 5.398 24 12 24c6.598 0 12-5.471 12-12.16a1.333 1.333 0 0 0-.154-.548c-.193-.368-.544-.606-1.023-.606-.472 0-.825.229-1.035.585-.117.2-.169.39-.189.582-.124 5.472-4.294 9.73-9.599 9.73-5.349 0-9.599-4.3-9.599-9.72 0-4.46 3.036-8.299 7.28-9.444.127-.036.291-.107.458-.232.373-.28.57-.711.46-1.244z"
            fillRule="nonzero"
            style={
              Object {
                "fill": "#ffffff",
              }
            }
          />
        </svg>
      </div>
      <span
        className=""
        style={
          Object {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
          }
        }
      >
        light, size: small (24px)
      </span>
    </div>
    <div
      className=""
      style={
        Object {
          "alignItems": "center",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "column",
          "height": 154,
          "justifyContent": "center",
          "margin": 0,
          "marginRight": 16,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "textAlign": "center",
          "width": 154,
          "zIndex": 0,
        }
      }
    >
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <svg
          className=""
          height={16}
          style={
            Object {
              "animationDuration": "1.1s",
              "animationIterationCount": "infinite",
              "animationName": Object {
                "0%": Object {
                  "transform": "rotate(0deg)",
                },
                "100%": Object {
                  "transform": "rotate(360deg)",
                },
                "50%": Object {
                  "transform": "rotate(180deg)",
                },
              },
              "animationTimingFunction": "linear",
            }
          }
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className=""
            d="M7.237.741C7.165.393 6.95.154 6.656.053A1.01 1.01 0 0 0 6.18.01c-.053.009-.053.009-.087.017C2.553.949 0 4.214 0 7.91 0 12.36 3.598 16 8 16c4.4 0 8-3.647 8-8.112a1.02 1.02 0 0 0-.118-.423.877.877 0 0 0-.808-.48.909.909 0 0 0-.81.46c-.09.151-.13.296-.146.455-.08 3.493-2.737 6.207-6.118 6.207-3.41 0-6.118-2.74-6.118-6.196 0-2.843 1.936-5.291 4.644-6.022.1-.028.224-.082.352-.177a.928.928 0 0 0 .36-.97z"
            fillRule="nonzero"
            style={
              Object {
                "fill": "#ffffff",
              }
            }
          />
        </svg>
      </div>
      <span
        className=""
        style={
          Object {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
          }
        }
      >
        light, size: xsmall (16px)
      </span>
    </div>
  </div>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <span
      className=""
      style={
        Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
        }
      }
    >
      Inline inside
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "inline",
            "flexDirection": "column",
            "justifyContent": "center",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <svg
          className=""
          height={16}
          style={
            Object {
              "animationDuration": "1.1s",
              "animationIterationCount": "infinite",
              "animationName": Object {
                "0%": Object {
                  "transform": "rotate(0deg)",
                },
                "100%": Object {
                  "transform": "rotate(360deg)",
                },
                "50%": Object {
                  "transform": "rotate(180deg)",
                },
              },
              "animationTimingFunction": "linear",
            }
          }
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className=""
            d="M7.237.741C7.165.393 6.95.154 6.656.053A1.01 1.01 0 0 0 6.18.01c-.053.009-.053.009-.087.017C2.553.949 0 4.214 0 7.91 0 12.36 3.598 16 8 16c4.4 0 8-3.647 8-8.112a1.02 1.02 0 0 0-.118-.423.877.877 0 0 0-.808-.48.909.909 0 0 0-.81.46c-.09.151-.13.296-.146.455-.08 3.493-2.737 6.207-6.118 6.207-3.41 0-6.118-2.74-6.118-6.196 0-2.843 1.936-5.291 4.644-6.022.1-.028.224-.082.352-.177a.928.928 0 0 0 .36-.97z"
            fillRule="nonzero"
            style={
              Object {
                "fill": "rgba(33,36,44,0.16)",
              }
            }
          />
        </svg>
      </div>
       
      some text.
    </span>
  </div>
</div>
`;
